[package]
name = "cve-get"
version = "0.1.0"
authors = ["Darth-Revan <S1610304005@students.fh-hagenberg.at>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
curl = "0.4"
chrono = {version = "0.4", features = ["serde"]}

[dependencies.clap]
version = "2.3"
default-features = false
features = ["suggestions"]

[lib]
name = "libcveget"
path = "src/lib.rs"

[[bin]]
name = "cve-get"
path = "src/main.rs"
doc = false

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
incremental = false
overflow-checks = false
